fix(ui): fix overflow on dashboard

--- a/app/scripts/superdesk-dashboard/styles/dashboard.less
+++ b/app/scripts/superdesk-dashboard/styles/dashboard.less
@@ -10,8 +10,9 @@
 	right: 0; 
 	bottom: 0;
 	top: @topspace + @subnav-height;
+	overflow-y: auto;
 	.content {
-		padding: 0 20px 20px 0;
+		padding: 0 20px 20px+@bottom-view-padding 0;
 	}
 	.empty-dashboard {
 		position: absolute;
